in process of implementing dynamic dom updates to avoid refresh so screens don't jump when updated

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,12 @@
-/*overrides*/
+
+.toast_style {
+  height: 84px;
+  background-color: red;
+}
+
+.toast {
+  justify-content: space-around;
+}
 
 .nav {
   z-index: 998;
